--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information 
-title: Your Name
-position: Ph.D. Student
+title: Ming Gao
+position: Engineer
 affiliation: Your Affiliation
-email: yourname (at) example.edu
+email: sunmar96@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
